# Kemu-Kupu

./: .gitignore  .gitmodules  README.md  pom.xml  runQuiz.sh
.github/workflows/: cst.yml
api/: .example.env  .gitignore  Cargo.toml  Dockerfile  Rocket.toml.example  docker-compose.yml  readme.md  traefik-dynamic.yml
api/migrations/2021-10-08-194610_create_users/: down.sql  up.sql
api/src/: common.rs  main.rs  models.rs  schema.rs
api/static/www/: 404.html
design/: avatar.xcf
design_files/: design.pptx  design.xcf
src/main/java/: module-info.java
src/main/java/com/: App.java  ApplicationController.java  MainApp.java
src/main/java/com/components/: Clock.java  (+5 more)
src/main/resources/fxml/: Achievements.fxml  Attribution.fxml  AttributionScreen.fxml  Confirmation.fxml  Costume.fxml  Error.fxml  Exit.fxml  ExitScreen.fxml  GameMode.fxml  GameScreen.fxml  Help.fxml  Menu.fxml  MenuScreen.fxml  NewUser.fxml  Pause.fxml  Profile.fxml  Quiz.fxml  QuizScreen.fxml  Results.fxml  Reward.fxml  RewardScreen.fxml  RewardsScreen.fxml  Setting.fxml  SettingScreen.fxml  Shop.fxml  SignIn.fxml  Topic.fxml  TopicScreen.fxml  Wheel.fxml  primary.fxml  shopAvatar.fxml
src/main/resources/fxmlComponents/: achievementType.fxml  shopAvatar.fxml
src/main/resources/styles/: achievements.css  application.css  costumeShop.css  modal.css  profile.css  quiz.css  wheel.css
src/test/java/com/: FxmlTests.java  MainAppTest.java  SpellingTopicTest.java  SystemInterfaceTest.java  WordTest.java
wiki/: jo.md  john.md  serena.md
words/: babies  colours  compassPoints  daysOfWeek  engineering  feelings  monthsOfYear  software  uniLife  weather  work
(+157 files in other folders)
