[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
uuid = {version= "0.8", features = ["serde", "v4"]}
[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars"]