[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] } 
# serde = { version = "1.0.126", features = ["derive"] }
# serde_json = "1.0.64"
# uuid = {version= "0.8", features = ["serde", "v4"]}