[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] } 
rocket_sync_db_pools = { version = "0.1.0-rc.1", default-features = false, features = ["diesel_postgres_pool"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
pretty_env_logger="*"
argon2 = { version = "0.3.1", features = ["alloc"] }
rand_core = { version = "0.6", features = ["std"] }

[dev.dependencies]
pretty_env_logger="*"